@@ -33,7 +33,9 @@ Import-Package: com.openexchange.ajax,
  com.openexchange.messaging.generic.internet,
  com.openexchange.messaging.registry,
  com.openexchange.multiple,
+ com.openexchange.oauth,
  com.openexchange.osgi,
+ com.openexchange.server,
  com.openexchange.session,
  com.openexchange.tools.encoding,
  com.openexchange.tools.service,
